Updated SBStyles.css by removing no longer needed media target css! Updated ViewAssessmentTasks.js by adding css to dynamically change the spacing and flex direction of the box containing the two boxes of check-in or switch teams and complete buttons!

--- a/FrontEndReact/src/SBStyles.css
+++ b/FrontEndReact/src/SBStyles.css
@@ -156,18 +156,6 @@ h4, h5 {
   color: red;
 }
 
-@media (max-heigth: 1500px) {
-  .check-in-button {
-      margin-bottom: 10px !important;
-  }
-}
-
-@media (max-width: 1000px) {
-  .check-in-button {
-      margin-bottom: 10px !important;
-  }
-}
-
 #slider {
     height: 0.75rem;
     width: 100% !important;
